[gd_scene load_steps=5 format=2]

[ext_resource path="res://gui/view/CardDetail.gd" type="Script" id=1]
[ext_resource path="res://thridparty/big_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://gui/ForegroundPanel.tscn" type="PackedScene" id=3]
[ext_resource path="res://thridparty/medium_front.tres" type="DynamicFont" id=4]

[node name="CardDetail" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ForegroundPanel" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 315.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 300.0
margin_bottom = 678.0
rect_min_size = Vector2( 310, 0 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 310.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
text = "MagnaAngemon"
align = 1
clip_text = true

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
margin_top = 36.0
margin_right = 310.0
margin_bottom = 344.0
mouse_filter = 2
columns = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/GridContainer"]
visible = false
margin_right = 74.0
margin_bottom = 22.0
text = "Name:"
align = 2

[node name="NameLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
visible = false
margin_right = 212.0
margin_bottom = 22.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "MagnaAngemon"
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="CardTypeLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_right = 74.0
margin_bottom = 22.0
text = "Card Type:"
align = 2

[node name="CardTypeLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 78.0
margin_right = 310.0
margin_bottom = 22.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "Digimon"
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="ColorLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 26.0
margin_right = 74.0
margin_bottom = 48.0
text = "Color:"
align = 2

[node name="ColorLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 78.0
margin_top = 26.0
margin_right = 310.0
margin_bottom = 48.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "Yellow"
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="RarityLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 52.0
margin_right = 74.0
margin_bottom = 74.0
text = "Rarity:"
align = 2

[node name="RarityLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 78.0
margin_top = 52.0
margin_right = 310.0
margin_bottom = 74.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "Super Rare"
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="IdLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 78.0
margin_right = 74.0
margin_bottom = 100.0
text = "ID:"
align = 2

[node name="IdLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 78.0
margin_top = 78.0
margin_right = 310.0
margin_bottom = 100.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "BT1-060"
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="PlayCostLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 104.0
margin_right = 74.0
margin_bottom = 126.0
text = "Play Cost:"
align = 2

[node name="PlayCostEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 78.0
margin_top = 104.0
margin_right = 310.0
margin_bottom = 126.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "6"
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="PowerLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 130.0
margin_right = 74.0
margin_bottom = 152.0
text = "Power:"
align = 2

[node name="PowerLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 78.0
margin_top = 130.0
margin_right = 310.0
margin_bottom = 152.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "6000"
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="LevelLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 156.0
margin_right = 74.0
margin_bottom = 178.0
text = "Level:"
align = 2

[node name="LevelLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 78.0
margin_top = 156.0
margin_right = 310.0
margin_bottom = 178.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "5"
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="StageLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 182.0
margin_right = 74.0
margin_bottom = 204.0
text = "Stage:"
align = 2

[node name="StageLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 78.0
margin_top = 182.0
margin_right = 310.0
margin_bottom = 204.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "Ultimate"
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="TypeLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 208.0
margin_right = 74.0
margin_bottom = 230.0
text = "Type:"
align = 2

[node name="TypeLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 78.0
margin_top = 208.0
margin_right = 310.0
margin_bottom = 230.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "Archangel"
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="AttributeLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 234.0
margin_right = 74.0
margin_bottom = 256.0
text = "Attribute:"
align = 2

[node name="AttributeLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer"]
margin_left = 78.0
margin_top = 234.0
margin_right = 310.0
margin_bottom = 256.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "Vaccine"
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="EvolveLabel" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 260.0
margin_right = 74.0
margin_bottom = 282.0
text = "Evolve:"
align = 2

[node name="EvolveContainer" type="HBoxContainer" parent="VBoxContainer/GridContainer"]
margin_left = 78.0
margin_top = 260.0
margin_right = 310.0
margin_bottom = 282.0
mouse_filter = 2

[node name="LineEditColor" type="LineEdit" parent="VBoxContainer/GridContainer/EvolveContainer"]
margin_right = 66.0
margin_bottom = 22.0
mouse_filter = 2
size_flags_horizontal = 3
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "Color:"
align = 1
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/GridContainer/EvolveContainer"]
margin_left = 70.0
margin_right = 92.0
margin_bottom = 22.0
rect_min_size = Vector2( 22, 0 )
mouse_filter = 2
color = Color( 0.141176, 0.160784, 0.215686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/GridContainer/EvolveContainer/ColorRect"]
margin_left = 0.833145
margin_top = 1.0
margin_right = 20.8331
margin_bottom = 21.0
mouse_filter = 2
color = Color( 0.878431, 0.152941, 0.152941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LvLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer/EvolveContainer"]
margin_left = 96.0
margin_right = 162.0
margin_bottom = 22.0
mouse_filter = 2
size_flags_horizontal = 3
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "Lv2"
align = 1
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="CostLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer/EvolveContainer"]
margin_left = 166.0
margin_right = 232.0
margin_bottom = 22.0
mouse_filter = 2
size_flags_horizontal = 3
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "Cost 2"
align = 1
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="EvolveLabel2" type="Label" parent="VBoxContainer/GridContainer"]
margin_top = 286.0
margin_right = 74.0
margin_bottom = 308.0
text = "Evolve 2:"
align = 2

[node name="EvolveContainer2" type="HBoxContainer" parent="VBoxContainer/GridContainer"]
margin_left = 78.0
margin_top = 286.0
margin_right = 310.0
margin_bottom = 308.0
mouse_filter = 2

[node name="LineEditColor" type="LineEdit" parent="VBoxContainer/GridContainer/EvolveContainer2"]
margin_right = 66.0
margin_bottom = 22.0
mouse_filter = 2
size_flags_horizontal = 3
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "Color:"
align = 1
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/GridContainer/EvolveContainer2"]
margin_left = 70.0
margin_right = 92.0
margin_bottom = 22.0
rect_min_size = Vector2( 22, 0 )
mouse_filter = 2
color = Color( 0.141176, 0.160784, 0.215686, 1 )

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/GridContainer/EvolveContainer2/ColorRect"]
margin_left = 1.0
margin_top = 1.0
margin_right = 21.0
margin_bottom = 21.0
mouse_filter = 2
color = Color( 0.878431, 0.152941, 0.152941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LvLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer/EvolveContainer2"]
margin_left = 96.0
margin_right = 162.0
margin_bottom = 22.0
mouse_filter = 2
size_flags_horizontal = 3
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "Lv2"
align = 1
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="CostLineEdit" type="LineEdit" parent="VBoxContainer/GridContainer/EvolveContainer2"]
margin_left = 166.0
margin_right = 232.0
margin_bottom = 22.0
mouse_filter = 2
size_flags_horizontal = 3
custom_colors/font_color_uneditable = Color( 1, 1, 1, 1 )
text = "Cost 2"
align = 1
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="EffectLabel" type="Label" parent="VBoxContainer"]
margin_top = 348.0
margin_right = 310.0
margin_bottom = 375.0
custom_fonts/font = ExtResource( 4 )
text = "Effect:"

[node name="Effect" type="TextEdit" parent="VBoxContainer"]
margin_top = 379.0
margin_right = 310.0
margin_bottom = 459.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2
custom_colors/font_color_readonly = Color( 1, 1, 1, 1 )
text = "[When Digivolving] <Advance>(This Digimon can attack when your opponent has 1 or more memory.)
[When Digivolving] You may place 1 red Digimon card from your hand at the top of this Digimon's digivolution cards. Then, for each [OmniShoutmon] or [ZeigGreymon] in this Digimon's digivolution cards, delete 1 of your opponent's Digimon with 5000 DP or less."
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InEffectLabel" type="Label" parent="VBoxContainer"]
margin_top = 463.0
margin_right = 310.0
margin_bottom = 490.0
custom_fonts/font = ExtResource( 4 )
text = "Inheritable Effect:"

[node name="InEffect" type="TextEdit" parent="VBoxContainer"]
margin_top = 494.0
margin_right = 310.0
margin_bottom = 574.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2
custom_colors/font_color_readonly = Color( 1, 1, 1, 1 )
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecEffectLabel" type="Label" parent="VBoxContainer"]
margin_top = 578.0
margin_right = 310.0
margin_bottom = 605.0
custom_fonts/font = ExtResource( 4 )
text = "Security Effect:"

[node name="SecEffect" type="TextEdit" parent="VBoxContainer"]
margin_top = 609.0
margin_right = 310.0
margin_bottom = 689.0
rect_min_size = Vector2( 0, 80 )
mouse_filter = 2
custom_colors/font_color_readonly = Color( 1, 1, 1, 1 )
readonly = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
